--- a/LMP_Test.ipynb
+++ b/LMP_Test.ipynb
@@ -1783,7 +1783,7 @@
         "model_path = f'/content/drive/My Drive/Robotic Learning/LMP_test/{model_name}/'\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1804,7 +1804,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6621611e-f77a-442f-c9d6-8218904f8c42"
+        "outputId": "88382e10-9c8b-4524-a130-63a0a5f5c14c"
       },
       "source": [
         "while t < TRAIN_STEPS:\n",
@@ -1889,7 +1889,7 @@
         "        valid_gripper_loss.reset_states()\n",
         "\n",
         "    if t % save_inc == 0:\n",
-        "        save_weights(model_path)\n",
+        "        save_weights(model_path, t)\n",
         "\n",
         "    t += 1"
       ],
@@ -1898,27 +1898,15 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/multi_device_iterator_ops.py:601: get_next_as_optional (from tensorflow.python.data.ops.iterator_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use `tf.data.Iterator.get_next_as_optional()` instead.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/multi_device_iterator_ops.py:601: get_next_as_optional (from tensorflow.python.data.ops.iterator_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use `tf.data.Iterator.get_next_as_optional()` instead.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "\r   20/15000 [..............................] - ETA: 35:09:44 - Train Loss: 0.0391 - Validation Loss: 0.0742 - Time (s): 89.4000Saving model weights...\n",
+            " 1020/15000 [=>............................] - ETA: 6:42:53 - Train Loss: 0.0064 - Validation Loss: 0.0119 - Time (s): 4.1176Saving model weights...\n",
             "Weights saved!\n",
-            "   60/15000 [..............................] - ETA: 17:16:11 - Train Loss: 0.0296 - Validation Loss: 0.0379 - Time (s): 31.5333"
+            " 2020/15000 [===>..........................] - ETA: 5:59:07 - Train Loss: 0.0047 - Validation Loss: 0.0098 - Time (s): 3.2901Saving model weights...\n",
+            "Weights saved!\n",
+            " 3020/15000 [=====>........................] - ETA: 5:28:08 - Train Loss: 0.0039 - Validation Loss: 0.0093 - Time (s): 3.0073Saving model weights...\n",
+            "Weights saved!\n",
+            " 4020/15000 [=======>......................] - ETA: 4:57:52 - Train Loss: 0.0035 - Validation Loss: 0.0092 - Time (s): 2.8662Saving model weights...\n",
+            "Weights saved!\n",
+            " 4140/15000 [=======>......................] - ETA: 4:54:45 - Train Loss: 0.0034 - Validation Loss: 0.0092 - Time (s): 2.8551"
           ],
           "name": "stdout"
         }
