--- a/languageXplay.ipynb
+++ b/languageXplay.ipynb
@@ -1709,7 +1709,7 @@
         "      encoder = create_encoder(**model_params)\n",
         "      planner = create_planner(**model_params)\n",
         "\n",
-        "  optimizer = tfa.optimizers.AdamW(weight_decay=1e-4, learning_rate=1e-4)\n",
+        "  optimizer = tfa.optimizers.Adam(learning_rate=3e-4)\n",
         "  checkpoint = tf.train.Checkpoint(optimizer=optimizer, model=actor)\n",
         "\n",
         "# Now outside strategy .scope\n",
@@ -2548,7 +2548,8 @@
             "Weights saved!\n",
             " 5020/30000 [====>.........................] - ETA: 12:33:44 - Train Loss: 0.0046 - Validation Loss: 0.0046 - Time (s): 2.6741Saving model weights...\n",
             "Weights saved!\n",
-            " 5940/30000 [====>.........................] - ETA: 12:04:13 - Train Loss: 0.0044 - Validation Loss: 0.0044 - Time (s): 2.6286"
+            " 6020/30000 [=====>........................] - ETA: 12:01:32 - Train Loss: 0.0043 - Validation Loss: 0.0044 - Time (s): 2.6243Saving model weights...\n",
+            "Weights saved!\n"
           ],
           "name": "stdout"
         }
