--- a/languageXplay.ipynb
+++ b/languageXplay.ipynb
@@ -2549,7 +2549,24 @@
             " 5020/30000 [====>.........................] - ETA: 12:33:44 - Train Loss: 0.0046 - Validation Loss: 0.0046 - Time (s): 2.6741Saving model weights...\n",
             "Weights saved!\n",
             " 6020/30000 [=====>........................] - ETA: 12:01:32 - Train Loss: 0.0043 - Validation Loss: 0.0044 - Time (s): 2.6243Saving model weights...\n",
-            "Weights saved!\n"
+            "Weights saved!\n",
+            " 7020/30000 [======>.......................] - ETA: 11:30:44 - Train Loss: 0.0041 - Validation Loss: 0.0042 - Time (s): 2.5934Saving model weights...\n",
+            "Weights saved!\n",
+            " 8020/30000 [=======>......................] - ETA: 11:00:12 - Train Loss: 0.0040 - Validation Loss: 0.0041 - Time (s): 2.5716Saving model weights...\n",
+            "Weights saved!\n",
+            " 9020/30000 [========>.....................] - ETA: 10:29:54 - Train Loss: 0.0039 - Validation Loss: 0.0040 - Time (s): 2.5508Saving model weights...\n",
+            "Weights saved!\n",
+            "10020/30000 [=========>....................] - ETA: 9:59:51 - Train Loss: 0.0038 - Validation Loss: 0.0040 - Time (s): 2.5373 Saving model weights...\n",
+            "Weights saved!\n",
+            "11020/30000 [==========>...................] - ETA: 9:29:27 - Train Loss: 0.0037 - Validation Loss: 0.0039 - Time (s): 2.5238Saving model weights...\n",
+            "Weights saved!\n",
+            "12020/30000 [===========>..................] - ETA: 8:58:56 - Train Loss: 0.0036 - Validation Loss: 0.0039 - Time (s): 2.5121Saving model weights...\n",
+            "Weights saved!\n",
+            "13020/30000 [============>.................] - ETA: 8:28:55 - Train Loss: 0.0035 - Validation Loss: 0.0039 - Time (s): 2.5018Saving model weights...\n",
+            "Weights saved!\n",
+            "14020/30000 [=============>................] - ETA: 7:58:49 - Train Loss: 0.0034 - Validation Loss: 0.0038 - Time (s): 2.4954Saving model weights...\n",
+            "Weights saved!\n",
+            "14980/30000 [=============>................] - ETA: 7:29:56 - Train Loss: 0.0034 - Validation Loss: 0.0038 - Time (s): 2.4885"
           ],
           "name": "stdout"
         }
