--- a/languageXplay.ipynb
+++ b/languageXplay.ipynb
@@ -1222,17 +1222,43 @@
         "    dist = tfd.Normal(loc=mu, scale=scale)\n",
         "    return dist\n",
         "\n",
-        "def logistic_mixture(inputs):\n",
+        "def logistic_mixture(inputs, quantized = False):\n",
         "    weightings, mu, scale = inputs\n",
         "    dist = tfd.Logistic(loc=mu, scale=scale)\n",
+        "    if quantized:\n",
+        "      dist = tfd.QuantizedDistribution(\n",
+        "                distribution=tfd.TransformedDistribution(\n",
+        "                    distribution=dist,\n",
+        "                    bijector=tfb.Shift(shift=-0.5)),\n",
+        "                low=-128.,\n",
+        "                high=128.\n",
+        "            )\n",
         "    mixture_dist = tfd.MixtureSameFamily(\n",
         "        mixture_distribution=tfd.Categorical(logits=weightings),\n",
         "        components_distribution=dist,\n",
         "        validate_args=True\n",
         "    )\n",
-        "    return mixture_dist"
+        "    if quantized:\n",
+        "      quantized_scale = 0.2/256\n",
+        "      mixture_dist = tfd.TransformedDistribution(\n",
+        "          distribution=mixture_dist,\n",
+        "          bijector=tfb.Scale(scale=quantized_scale)\n",
+        "      )\n",
+        "\n",
+        "    return mixture_dist\n"
       ],
       "execution_count": 117,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W8s4EXr4-7WO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2022,7 +2048,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IXF0Y8aKrsng"
+        "id": "IXF0Y8aKrsng",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec23acbc-fd00-4174-8205-5b893fee8d2d"
       },
       "source": [
         "while t < TRAIN_STEPS:\n",
@@ -2120,7 +2150,54 @@
         "    t += 1"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r   40/40000 [..............................] - ETA: 54:31:02 - Train Loss: 0.0380 - Validation Loss: 0.0305 - Time (s): 80.3000Saving model weights...\n",
+            "Weights saved!\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/matplotlib/colors.py:263: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+            "  c = np.array(c)\n",
+            "/usr/local/lib/python3.6/dist-packages/numpy/core/_asarray.py:136: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+            "  return array(a, dtype, copy=False, order=order, subok=True)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\r   60/40000 [..............................] - ETA: 47:08:24 - Train Loss: 0.0324 - Validation Loss: 0.0262 - Time (s): 54.4000"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/plotly/matplotlylib/renderer.py:410: UserWarning:\n",
+            "\n",
+            "Bummer! Plotly can currently only draw Line2D objects from matplotlib that are in 'data' coordinates!\n",
+            "\n",
+            "/usr/local/lib/python3.6/dist-packages/plotly/matplotlylib/renderer.py:512: UserWarning:\n",
+            "\n",
+            "I found a path object that I don't think is part of a bar chart. Ignoring.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "  360/40000 [..............................] - ETA: 22:38:33 - Train Loss: 0.0118 - Validation Loss: 0.0128 - Time (s): 11.0944"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2516,11 +2593,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AldTJAdcydxj",
-        "outputId": "8ab06055-c518-4b78-a223-fd1e2a9f60f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AldTJAdcydxj",
+        "outputId": "8ab06055-c518-4b78-a223-fd1e2a9f60f4"
       },
       "source": [
         "# Testing that diversity does increase with more training data\r\n",
