--- a/languageXplay.ipynb
+++ b/languageXplay.ipynb
@@ -1239,7 +1239,7 @@
         "        validate_args=True\n",
         "    )\n",
         "    if quantized:\n",
-        "      quantized_scale = 0.2/256\n",
+        "      quantized_scale = 0.2/256 # update this to being between the action range\n",
         "      mixture_dist = tfd.TransformedDistribution(\n",
         "          distribution=mixture_dist,\n",
         "          bijector=tfb.Scale(scale=quantized_scale)\n",
@@ -2193,7 +2193,7 @@
         {
           "output_type": "stream",
           "text": [
-            "  360/40000 [..............................] - ETA: 22:38:33 - Train Loss: 0.0118 - Validation Loss: 0.0128 - Time (s): 11.0944"
+            "  740/40000 [..............................] - ETA: 19:55:39 - Train Loss: 0.0077 - Validation Loss: 0.0102 - Time (s): 6.6405"
           ],
           "name": "stdout"
         }
