tf records are very fast

--- a/notebooks/languageXplay.ipynb
+++ b/notebooks/languageXplay.ipynb
@@ -1085,6 +1085,9 @@
    },
    "outputs": [],
    "source": [
+    "import umap\n",
+    "reducer = umap.UMAP(metric='cosine', random_state=42)\n",
+    "\n",
     "colors_dict = {\n",
     " 'press button': [1,0,0], # red\n",
     " 'dial off': [0.2, 0.6, 0.2], # green\n",
@@ -1150,7 +1153,7 @@
     "hold_out = ['dial']\n",
     "\n",
     "def get_labelled_trajs(bucket=False):\n",
-    "    test_labels = np.load(TEST_DIR + '/trajectory_labels.npz', allow_pickle=True)['trajectory_labels']\n",
+    "    test_labels = np.load(TEST_DATA_PATH/'trajectory_labels.npz', allow_pickle=True)['trajectory_labels']\n",
     "    acts,obs, goals, labels, colors, paths = [], [], [], [], [], []\n",
     "    # this could be sped up significantly by just storing the trajs in memory, it takes ms on my local, but is a bit slow with colabs cpu\n",
     "    \n",
@@ -1165,19 +1168,13 @@
     "      if v not in hold_out:\n",
     "        folder = k.split('states_and_ims/')[1].split('/')[0]\n",
     "        start = int(k.split('env_states/')[1].split('/')[0].strip('.bullet'))\n",
-    "        data = np.load(TEST_DIR+'/obs_act_etc/'+folder+'/data.npz')\n",
+    "        data = np.load(TEST_DATA_PATH/'obs_act_etc/'/folder/'data.npz')\n",
     "        traj_len = 40\n",
     "        end = start + traj_len #min(len(data['acts_rpy'])-1,start+traj_len )\n",
-    "        traj_acts = data['acts_rpy'][start:end]\n",
-    "        traj_obs = data['obs_rpy'][start:end] \n",
-    "        if PROPRIOCEPTION:\n",
-    "          traj_obs = np.concatenate([traj_obs, np.expand_dims( data['proprioception'][start:end], 1 ) ], axis=1)\n",
-    "          \n",
+    "        traj_acts = data['acts'][start:end]\n",
+    "        traj_obs = data['obs'][start:end]\n",
     "        traj_goals = data['achieved_goals'][end]\n",
-    "        acts.append(traj_acts), obs.append(traj_obs), goals.append(traj_goals), labels.append(v), colors.append(c), paths.append(k.replace('data_collection/collected_data/UR5_25Hz_test_suite/', TEST_DIR))\n",
-    "\n",
-    "        \n",
-    "\n",
+    "        acts.append(traj_acts), obs.append(traj_obs), goals.append(traj_goals), labels.append(v), colors.append(c), paths.append(TEST_DATA_PATH/\"/\".join(k.split('/')[4:]))\n",
     "\n",
     "    return np.array(obs), np.array(acts), np.array(goals), labels, colors, paths\n",
     "\n",
@@ -1206,7 +1203,7 @@
     "    bucket = True\n",
     "    batch = v_it.next()\n",
     "    obs, acts, goals, labels, colors, paths = get_labelled_trajs(bucket=bucket)\n",
-    "    num_take = 1000\n",
+    "    num_take = dataloader.batch_size\n",
     "    batch_states,batch_acts, batch_goals, batch_colors = batch['obs'][:num_take, :40, :],batch['acts'][:num_take, :40, :], batch['goals'][:num_take, 0, :], [[0.8,0.8,0.8,0.6]]*num_take\n",
     "    obs  = np.concatenate([obs, batch_states])\n",
     "    acts = np.concatenate([acts, batch_acts])\n",
@@ -1217,7 +1214,10 @@
     "    fig_enc, scatter = project_labelled_latents(reducer, z_enc.sample(), colors + batch_colors, bucket)\n",
     "    fig_plan, scatter = project_labelled_latents(reducer, z_plan.sample(), colors + batch_colors, bucket)\n",
     "    \n",
-    "    return fig_enc, fig_plan"
+    "    return fig_enc, fig_plan\n",
+    "\n",
+    "\n",
+    "_ = produce_cluster_fig()"
    ]
   },
   {
