--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load our beautiful models"
+    "# Load our  models"
    ]
   },
   {
