tf records created and train file running

--- a/experimental/Review and Analysis.ipynb
+++ b/experimental/Review and Analysis.ipynb
@@ -3571,7 +3571,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Testing that diversity does increase with more training data\n",
+    "t_it = iter(train_dataset)\n",
+    "mins = np.min(dataset['obs_rpy'], axis = 0)\n",
+    "maxes = np.max(dataset['obs_rpy'], axis = 0)\n",
+    "shape = dataset['obs_rpy'].shape[1]\n",
+    "bins = np.linspace(mins,maxes+0.01, 11)\n",
+    "\n",
+    "\n",
+    "def get_quantisation(ags, bins):\n",
+    "    qs = []\n",
+    "    for idx in range(0 , shape):\n",
+    "      quantiles = np.digitize(ags[:, idx], bins[:,idx])\n",
+    "      qs.append(quantiles)\n",
+    "    return np.array(qs).T\n",
+    "\n",
+    "\n",
+    "\n",
+    "batch = t_it.next()\n",
+    "o = tf.reshape(batch['obs'][:,:,:], (-1, OBS_DIM))\n",
+    "coverage = get_quantisation(o, bins)\n",
+    "\n",
+    "shapes = []\n",
+    "for i in range(0,10):\n",
+    "  batch = t_it.next()\n",
+    "  o = tf.reshape(batch['obs'][:,:,:], (-1, OBS_DIM))\n",
+    "  c = get_quantisation(o, bins)\n",
+    "  coverage = np.unique(np.concatenate([coverage, c], 0), axis = 0)\n",
+    "  shapes.append(coverage.shape[0])\n",
+    "\n",
+    "\n",
+    "np.unique(get_quantisation(dataset['obs_rpy'], bins), axis = 0).shape\n",
+    "\n",
+    "plt.plot([120215]*11)\n",
+    "plt.plot(old)\n",
+    "plt.plot(shapes)\n",
+    "plt.plot(one)\n",
+    "\n",
+    "plt.title(\"Unique states observed in batches with shuffle size N\")\n",
+    "plt.legend(['Unique values', 40, 10, 1])"
+   ]
   }
  ],
  "metadata": {
