--- a/notebooks/Deploy.ipynb
+++ b/notebooks/Deploy.ipynb
@@ -154,21 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15396 frames, which is 0hrs 10m.\n",
-      "{'obs': TensorSpec(shape=(32, 50, 18), dtype=tf.float32, name=None), 'acts': TensorSpec(shape=(32, 50, 7), dtype=tf.float32, name=None), 'goals': TensorSpec(shape=(32, 50, 11), dtype=tf.float32, name=None), 'seq_lens': TensorSpec(shape=(32,), dtype=tf.float32, name=None), 'masks': TensorSpec(shape=(32, 50), dtype=tf.float32, name=None), 'dataset_path': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None), 'tstep_idxs': TensorSpec(shape=(32, None, 1), dtype=tf.int32, name=None)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset = dataloader.extract([TEST_DATA_PATH])\n",
-    "valid_dataset = dataloader.load(dataset)"
+    "record_paths = []\n",
+    "for p in [TEST_DATA_PATH]:\n",
+    "    record_paths += glob.glob(str(p/'tf_records/*.tfrecords'))"
    ]
   },
   {
@@ -310,6 +302,7 @@
     }
    ],
    "source": [
+    "#dataset = dataloader.extract([TEST_DATA_PATH])\n",
     "import seaborn as sns\n",
     "for i in range(0,dataset['achieved_goals'].shape[1]):\n",
     "    sns.distplot(dataset['achieved_goals'][:,i], hist=True, kde=True, \n",
@@ -321,14 +314,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obs: (N,18), Acts: (N,7), Goals: (N,11)\n"
+      "{'obs': TensorSpec(shape=<unknown>, dtype=tf.float32, name=None), 'acts': TensorSpec(shape=<unknown>, dtype=tf.float32, name=None), 'goals': TensorSpec(shape=(32, 50, None), dtype=tf.float32, name=None), 'seq_lens': TensorSpec(shape=(32,), dtype=tf.float32, name=None), 'masks': TensorSpec(shape=(32, 50), dtype=tf.float32, name=None), 'dataset_path': TensorSpec(shape=(32, None), dtype=tf.int32, name=None), 'tstep_idxs': TensorSpec(shape=(32, None), dtype=tf.int32, name=None)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "valid_dataset = dataloader.load(record_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iter(valid_dataset).next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Obs: (N,None), Acts: (N,None), Goals: (N,None)\n"
      ]
     }
    ],
